platform/argocd/foundations/aa67ff10-d73f-423c-8e6d-71eda2e1af69.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc329-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: aa67ff10-d73f-423c-8e6d-71eda2e1af69
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 42f87499-2630-4641-af0b-95ca21125d45
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc329-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: aa67ff10-d73f-423c-8e6d-71eda2e1af69
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 42f87499-2630-4641-af0b-95ca21125d45
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc329-qualification-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: aa67ff10-d73f-423c-8e6d-71eda2e1af69
    kuberploy.io/foundation-contract: v1
    kuberploy.io/project-id: 42f87499-2630-4641-af0b-95ca21125d45
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
